tests/specs/ecosystem/geacko/resp3_parser/1_1_6.test
geacko/resp3-parser/1.1.6
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2488 [ERROR]: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.
    super(...({} as never));
             ~~~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:13:14

TS2488 [ERROR]: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.
    super(...({} as never));
             ~~~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:18:14

Found 2 errors.

